# rosavatar

./: .travis.yml  CMakeLists.txt  README.md  package.xml
data/: avatar_1eye_bad_folder.xml  avatar_1eye_no_folder.xml  avatar_1led_good_folder.xml  avatar_1led_no_folder.xml  avatar_2eyes2leds.xml  avatar_mini.xml  avatar_octopus.xml  avatar_unai.xml
data/avatars/: avatar_1eye_bad_folder.xml  avatar_1eye_good_folder.xml  avatar_1eye_no_folder.xml  avatar_1led_bad_folder.xml  avatar_1led_good_folder.xml  avatar_1led_no_folder.xml  avatar_2eyes.xml  avatar_2eyes2leds.xml  avatar_2leds.xml  avatar_empty_wh.xml  avatar_mini.xml  avatar_mip.xml  avatar_octopus.xml  avatar_unai.xml
include/rosavatar/: opencv_face_detector.h  rosavatar.h  sdl_avatar.h
launch/: face_control.launch  mouse_control.launch
src/: CMakeLists.txt  face2point.cpp  rosavatar.cpp  win2point.cpp
test/: CMakeLists.txt  gtest_rosavatar.cpp
third_parties/: CMakeLists.txt
