### 1 - Required CMake Version
cmake_minimum_required(VERSION 2.8.3)
### 2- Package Name
project(rosavatar)
### 3 - Find other CMake/Catkin packages needed for build
find_package(catkin REQUIRED COMPONENTS roscpp cv_bridge image_transport)
find_package( OpenCV REQUIRED )
find_package( Boost COMPONENTS system filesystem)
### 4 - Message/Service/Action Generators (add_message_files(), add_service_files(), add_action_files())
# nothing to do
### 5 - Invoke message/service/action generation (generate_messages())
# nothing to do
### 6 - Specify package build info export (catkin_package())
catkin_package(
  INCLUDE_DIRS include third_parties
  CATKIN_DEPENDS roscpp cv_bridge image_transport
)
### 7 - Libraries/Executables to build (add_library()/add_executable()/target_link_libraries())
include_directories(
  include third_parties
  ${catkin_INCLUDE_DIRS}
)
ADD_SUBDIRECTORY(third_parties)
ADD_SUBDIRECTORY(src)
### 8 - Tests to build (catkin_add_gtest())
#~ ADD_SUBDIRECTORY(test)
### 9 - Install rules (install())
install(DIRECTORY include/${PROJECT_NAME}/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
   FILES_MATCHING PATTERN "*.h"
   PATTERN ".svn" EXCLUDE
)
