<?xml version="1.0"?>
<!-- doc: http://wiki.ros.org/catkin/package.xml -->
<package format="2">
  <name>rosavatar</name>
  <version>0.0.0</version>
  <description>
    Extension of the "avatar" repo for ROS.
    "avatar": robotic avatar made of virtual face and eyes
  </description>
  <maintainer email="arnaud.a.ramey@gmail.com">Arnaud Ramey</maintainer>
  <license>LGPLv3</license>
  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>sdl2</depend>
  <!-- own deps -->
  <depend>vision_utils</depend>
  <export>
    <rosdoc config="rosdoc.yaml" /> <!-- http://wiki.ros.org/rosdoc_lite -->
  </export>
</package>
